* Compatible change
- Bugfix
+ New feature
===============================================================================

~~~~~~~~~
* v5.3.1:
~~~~~~~~~

* Assembly changes:
===================
* Members are annotated for using C# 8.0 nullable references
* The module initializer initializes the resources.
+ Targeting also .NET 5.0

* KGySoft.Drawing namespace:
============================
* Icons class: Using non-locking caches

* KGySoft.Drawing.Imaging namespace:
====================================
- BitmapDataFactory class:
  - BeginLoad/LoadAsync methods: They didn't use the specified async configuration.
- BitmapDataExtensions class:
  - Clear/BeginClear/ClearAsync methods: They could throw a NullReferenceException if a custom IWritableBitmapData
    instance had indexed PixelFormat but its Palette was null. From now on even such bitmap data can be cleared but
    the specified color will be ignored and the data is always cleared with zero palette index.
  * AdjustGamma/BeginAdjustGamma/AdjustGammaAsync methods: Improving performance
* Palette class: Improving performance when initialized without a custom mapping (cache is now totally lock-free).


~~~~~~~~~
! v5.3.0:
~~~~~~~~~

* KGySoft.Drawing namespace:
============================
* BitmapExtensions class:
  - Resize method (with ScalingMode overload): fixing some interpolated resizing glitches in edge cases
  * GetColors/GetColorCount methods: Improving performance
* Icons class:
  * The shadow mask of Icon resources have been changed so they appear better when displayed on a display or
    operating system with no alpha gradient support.
* ImageExtensions class:
  + New BeginConvertPixelFormat/EndConvertPixelFormat methods
  + New ConvertPixelFormatAsync methods (on .NET 4.0 and above)
  + New ToIcon overload with ScalingMode parameter
  - ConvertPixelFormat methods: Setting ColorPalette.Flags of the result Bitmap correctly. In Mono/Linux it could